--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1300,7 +1300,11 @@ input[type="submit"] {
   -ms-flex-align: center;
   align-items: center;
 }
-
+@media (max-width:991px){
+    .header-wrapper {
+        justify-content: space-between;
+      }
+}
 .header-wrapper .logo {
   width: 170px;
 }
